--- a/src/training_script/requirements.txt
+++ b/src/training_script/requirements.txt
@@ -1,10 +1,9 @@
-tensorflow==1.13.1
-librosa==0.6.1
-matplotlib==2.2.2
-numpy==1.19.1
-scikit-image==0.15.0
-scipy==1.2.1
-pydub==0.23.1
-keras==2.2.4
-scikit-learn==0.20.1
-
+tensorflow==2.3.0
+librosa==0.8.0
+matplotlib==3.3.1
+numpy==1.18.5
+scikit-image==0.17.2
+scipy==1.4.1
+pydub==0.24.1
+Keras==2.4.3
+scikit-learn==0.23.2
