--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,11 @@ pytest==6.0.1
 scipy==1.4.1
 soundfile==0.10.1
 numba==0.48
-scikit-learn==0.23.2 
-scikit-image==0.17.2 
+tensorflow==2.3.0
+librosa==0.8.0
+matplotlib==3.3.1
+numpy==1.18.5
+scikit-image==0.17.2
+scipy==1.4.1
+Keras==2.4.3
+scikit-learn==0.23.2
