--- a/src/training_script/Dockerfile
+++ b/src/training_script/Dockerfile
@@ -8,14 +8,15 @@ RUN unzip awscliv2.zip
 RUN ./aws/install
 RUN aws --no-sign-request s3 cp s3://acoustic-sandbox/preprocess_mag_scipy_Srkws.h5 ./
 RUN aws --no-sign-request s3 cp s3://acoustic-sandbox/No_preprocess_test ./
-RUN tar -xzf OrcasoundLab07052019_PodCastRound2.tar.gz
+RUN unzip test_psd.zip ./
 
-COPY model_build_and_training.py .
+COPY report.py .
+COPY statistics.py
 COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
-ENTRYPOINT ["python3","./model_build_and_training.py"]
+ENTRYPOINT ["python3","./report.py"]
 
 
 
